# openchemistry

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  README  README.md
TPLs/mongo/: CMakeLists.txt
cmake/: CMakeCache.txt  External_JKQTPlotter.cmake  External_VTK.cmake  External_avogadroapp.cmake  External_avogadrolibs.cmake  External_boost.cmake  External_chemdata.cmake  External_chemkit.cmake  External_eigen.cmake  External_glew.cmake  External_gtest.cmake  External_hdf5.cmake  External_kdsoap.cmake  External_libarchive.cmake  External_libmsym.cmake  External_libxml2.cmake  External_mmtfcpp.cmake  External_molequeue.cmake  External_mongochem.cmake  External_mongodb.cmake  External_msgpackc.cmake  External_openbabel.cmake  External_openqube.cmake  External_pcre.cmake  External_protobuf.cmake  External_protocall.cmake  External_pybind11.cmake  External_qttesting.cmake  External_spglib.cmake  External_yaehmop.cmake  External_zlib.cmake  FindMongoDB.cmake  TestExternal_mongodb.cmake  download_all.cmake  download_dir.cmake  glew.CMakeLists.txt.in  gtest.CMakeLists.txt.in  hdf5.CMakeLists.txt.in  header_library.CMakeLists.txt  ichilnct.txt  (+8 more)
scripts/: setup-for-development.sh
scripts/gitsetup/: config
tpl/: CMakeLists.txt
tpl/mongo/: connpool.cpp.patch  text.cpp.patch
